III/OOP/lab1/src/main/antrl4.com.marchuk0.lab1/SpreadSheet.g4
grammar SpreadSheet;


//Tokens

POW: '^';
MUL: '*';
DIV: '/';
ADD: '+';
SUB: '-';
LPAR: '(';
RPAR: ')';
INC: 'inc';
DEC: 'dec';
MMIN: 'mmin';
MMAX: 'mmax';
ARGSEPARATOP: ',';
NUMBER: [0-9]+;
WHITESPACE: [ \r\n\t]+ -> skip;






formula
    : '=' expression EOF
    ;


expression
   : NUMBER                                         # Number
   | LPAR inner=expression RPAR                     # Parentheses
   | operator = MMIN LPAR inner=minargs RPAR        # Minimum
   | operator = MMAX LPAR inner=maxargs RPAR        # Maximum
   | operator = INC LPAR inner=expression RPAR      # Increment
   | operator = DEC LPAR inner=expression RPAR      # Decrement
   | left=expression operator=POW right=expression  # Power
   | left=expression operator=MUL right=expression  # Multiplication
   | left=expression operator=DIV right=expression  # Division
   | left=expression operator=ADD right=expression  # Addition
   | left=expression operator=SUB right=expression  # Subtraction
   | SUB NUMBER #UnarySubtraction
   ;

minargs
   : expression #SimpleMinArgs
   | expression ARGSEPARATOP minargs #RecursiveMinArgs
   ;
maxargs
   : expression #SimpleMaxArgs
   | expression ARGSEPARATOP maxargs #RecursiveMAxArgs
   ;
